# financial-analytic-as-mcp

./: .gitignore  CLAUDE.md  DEPLOY.md  Makefile  README.md  pyproject.toml
docs/diagrams/: _common.puml  create_task.puml  get_task_result.puml  get_task_status.puml  init.puml  list_skills.puml
openspec/: project.md
openspec/specs/list-skills/: spec.md
scripts/ci/: forbid_async_open.py  univ_grep.py
specs/: README.md
specs/create-task/: create_task.puml  spec.md
specs/get-task-result/: get_task_result.puml  spec.md
specs/get-task-status/: get_task_status.puml  spec.md
specs/init/: init.puml  spec.md
specs/list-skills/: list_skills.puml  spec.md
src/finance_skills_mcp/: __init__.py  __main__.py  agent_runner.py  errors.py  ids.py  lock_manager.py  logging_config.py  server.py  skill_catalog.py  skill_index_store.py  skill_indexer.py  task_manager.py  task_store.py
tasks/: .gitignore
tests/: conftest.py
tests/_fixtures/: mock_agent_runner.py
tests/fixtures/skills/aaaa-test-skill-zzzz/: SKILL.md
tests/fixtures/skills/fixture-skill-alpha/: SKILL.md
tests/fixtures/skills_malformed/: _README.md
tests/fixtures/skills_malformed/bad-yaml/: SKILL.md
tests/fixtures/skills_malformed/invalid-name-UPPER/: SKILL.md
tests/fixtures/skills_malformed/missing-description/: SKILL.md
tests/fixtures/skills_malformed/missing-name/: SKILL.md
tests/fixtures/skills_malformed/unknown-fields/: SKILL.md
tests/integration_in_memory/: README.md  _indexing_helpers.py  conftest.py  test_busy.py  test_contamination.py  test_disk_precheck.py  test_event_loop.py  test_per_task_logging.py  test_timeout.py  test_universal_indexing.py  test_walking_skeleton.py
tests/integration_live/: README.md  _client_helpers.py  conftest.py  test_real_finance_skills.py  test_walking_skeleton.py
tests/unit/: test_atomic_writes.py  test_contract.py  test_disk_precheck.py  test_foundation.py  test_lock_recovery.py  test_logging_config.py  test_scaffold_sanity.py  test_server_skill_wiring.py  test_skill_index_store.py  test_skill_indexer.py  test_stage_skills_failure.py  test_write_order.py
