[project]
name = "finance-skills-mcp"
version = "0.1.0"
description = "MCP server wrapping markdown-defined finance skills via Claude Agent SDK"
authors = [
    { name = "Stas", email = "rontero@gmail.com" }
]
requires-python = ">=3.10"
# Phase 1 runtime deps (added 2026-05-19 — plan 01-01).
# Standard stack per .planning/phases/01-vertical-slice-4-tools-fixture-skill/01-RESEARCH.md §Standard Stack.
dependencies = [
    "fastmcp>=3.3.1,<4",
    "claude-agent-sdk>=0.2.82,<0.3",
    "anyio>=4.6,<5",
    "filelock>=3.16,<4",
    "pydantic>=2.9,<3",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "contract: validates MCP responses against OpenSpec schemas",
    "live: hits the real Claude Agent SDK; nightly only",
    "in_memory: uses FastMCP in-memory Client (Phase 1+)",
]

[dependency-groups]
dev = [
    "anyio[pytest]>=4.6",
    "jsonschema>=4.23",
    "pydantic>=2.9",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "python-frontmatter>=1.1",
]
